--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -15,7 +15,11 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
